--- a/.github/workflows/py-merge-to-main-publish.yml
+++ b/.github/workflows/py-merge-to-main-publish.yml
@@ -6,25 +6,13 @@ jobs:
   create-release:
     runs-on: ubuntu-latest
     outputs:
-      created-release: ${{ steps.release.outputs.release_created }}
+      created-release: ${{ steps.release.outputs.created-release }}
     steps:
-      - uses: zerapix/reusable-workflows/py-run-tests@main
-        with:
-          GEMFURY_DEPLOY_TOKEN: ${{ secrets.GEMFURY_DEPLOY_TOKEN }}
-      - name: Install tomlkit
-        # Ensure tomlkit is installed so I can retrieve package info on next step.
-        # In Python 3.11, there is now a built-in `tomllib` library we can use.
-        # Once everything is on Python 3.11, we can change this code to use `tomllib` instead.
-        run: poetry run pip install tomlkit
-      - name: Retrieve Project Package via tomlkit
-        run: |
-          PY_OUTPUT=$(poetry run -q python -c "import tomlkit; import pathlib; print(tomlkit.parse(pathlib.Path('pyproject.toml').read_text())['tool']['poetry']['name'], end='')")
-          echo "PY_PKG=$PY_OUTPUT" >> $GITHUB_ENV
-      - uses: google-github-actions/release-please-action@v3
+      - uses: zerapix/reusable-workflows/py-create-release@main
         id: release
         with:
-          release-type: python
-          package-name: ${{ env.PY_PKG }}
+          GEMFURY_DEPLOY_TOKEN: ${{ secrets.GEMFURY_DEPLOY_TOKEN }}
+          release-branch: ${{ inputs.release-branch }}
 
   # Create Separate Job, to distinguish release-creation from publishing
   # (release could have succeeded but deployment fail, can easily re-run deployment without running create-release again)
