--- a/.github/workflows/py-merge-to-main-publish+serverless.yml
+++ b/.github/workflows/py-merge-to-main-publish+serverless.yml
@@ -20,7 +20,7 @@ jobs:
     outputs:
       created-release: ${{ steps.release.outputs.created-release }}
     steps:
-      - uses: zerapix/reusable-workflows/py-create-release@main
+      - uses: zerapix/reusable-workflows/py-create-release@test
         id: release
         with:
           GEMFURY_DEPLOY_TOKEN: ${{ secrets.GEMFURY_DEPLOY_TOKEN }}
@@ -34,10 +34,10 @@ jobs:
     concurrency: publish-dev
     if: ${{ needs.create-release.outputs.created-release }}
     steps:
-      - uses: zerapix/reusable-workflows/py-setup-project@main
+      - uses: zerapix/reusable-workflows/py-setup-project@test
         with:
           GEMFURY_DEPLOY_TOKEN: ${{ secrets.GEMFURY_DEPLOY_TOKEN }}
-      - uses: zerapix/reusable-workflows/py-publish-fury@main
+      - uses: zerapix/reusable-workflows/py-publish-fury@test
         with:
           GEMFURY_PUBLISH_TOKEN: ${{ secrets.GEMFURY_PUBLISH_TOKEN }}
 
@@ -50,10 +50,10 @@ jobs:
     concurrency: deploy-dev
     if: ${{ needs.create-release.outputs.created-release }}
     steps:
-      - uses: zerapix/reusable-workflows/py-setup-project@main
+      - uses: zerapix/reusable-workflows/py-setup-project@test
         with:
           GEMFURY_DEPLOY_TOKEN: ${{ secrets.GEMFURY_DEPLOY_TOKEN }}
-      - uses: zerapix/reusable-workflows/py-deploy-serverless@main
+      - uses: zerapix/reusable-workflows/py-deploy-serverless@test
         with:
           environment: ${{ inputs.auto-release-environment }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
