--- a/.github/workflows/py-merge-to-main.yml
+++ b/.github/workflows/py-merge-to-main.yml
@@ -18,7 +18,7 @@ jobs:
   reusable:
     # Depending on if the merge to main was a release merge, or a normal branch merge...
     # it will either create a PR with a release candidate or create a github release object.
-    uses: zerapix/reusable-workflows/.github/workflows/py-create-release.yml@main
+    uses: zerapix/reusable-workflows/.github/workflows/py-create-release.yml@test
     secrets: inherit
     with:
       RUN_TESTS: ${{ inputs.RUN_TESTS }}
