--- a/.github/workflows/py-publish.yml
+++ b/.github/workflows/py-publish.yml
@@ -7,9 +7,9 @@ jobs:
     runs-on: ubuntu-latest
     concurrency: deploy-${{ inputs.environment }}
     steps:
-      - uses: zerapix/reusable-workflows/py-run-tests@main
+      - uses: zerapix/reusable-workflows/py-run-tests@test
         with:
           GEMFURY_DEPLOY_TOKEN: ${{ secrets.GEMFURY_DEPLOY_TOKEN }}
-      - uses: zerapix/reusable-workflows/py-publish-fury@main
+      - uses: zerapix/reusable-workflows/py-publish-fury@test
         with:
           GEMFURY_PUBLISH_TOKEN: ${{ secrets.GEMFURY_PUBLISH_TOKEN }}
