feat: normalize the override stage feature with associated action.

--- a/.github/workflows/py-deployment-w-serverless-db.yml
+++ b/.github/workflows/py-deployment-w-serverless-db.yml
@@ -6,10 +6,11 @@ on:
         description: Environment to deploy in.
         type: environment
         default: dev
+
       override-stage-name:
         required: false
         type: string
-        default: ${{ inputs.environment }}
+        default: ''
         description: Defaults to the environment name; use this if the stage is different; like if its an account-wide "all" stage.
   workflow_call:
     inputs:
@@ -17,10 +18,11 @@ on:
         type: string
         default: dev
         description: Environment to deploy in.
+
       override-stage-name:
         required: false
         type: string
-        default: ${{ inputs.environment }}
+        default: ''
         description: Defaults to the environment name; use this if the stage is different; like if its an account-wide "all" stage.
 jobs:
   deploy:
@@ -40,7 +42,7 @@ jobs:
       - uses: zerapix/reusable-workflows/py-deploy-serverless@test
         with:
           environment: ${{ inputs.environment }}
-          override-stage-name: ${{ inputs.override-stage-name}}
+          override-stage-name: ${{ inputs.override-stage-name }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
     services:
