--- a/.github/workflows/py-test.yml
+++ b/.github/workflows/py-test.yml
@@ -7,6 +7,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Setup and Test Project
-        uses: zerapix/reusable-workflows/py-run-tests@test
+        uses: zerapix/reusable-workflows/py-run-tests@main
         with:
           GEMFURY_DEPLOY_TOKEN: ${{ secrets.GEMFURY_DEPLOY_TOKEN }}
