--- a/.github/workflows/js-merge-main.yml
+++ b/.github/workflows/js-merge-main.yml
@@ -14,9 +14,10 @@ jobs:
     # If are already on a 'release' commit, we should skip this job.
     if: "!startsWith(github.event.head_commit.message, 'chore(release): ')"
     steps:
-      - uses: zerapix/reusable-workflows/${{ inputs.project-type }}-setup-project@test
+      - uses: zerapix/reusable-workflows/js-setup-project@test
         with:
           GEMFURY_DEPLOY_TOKEN: ${{ secrets.GEMFURY_DEPLOY_TOKEN }}
+      - run: echo TYPE IS ${{ inputs.project-type }}
 
 #  # Create Separate Job, to distinguish release-creation from deployment
 #  # (release could have succeeded but deployment fail, can easily re-run deployment without running create-release again)
