--- a/.github/workflows/js-merge-main.yml
+++ b/.github/workflows/js-merge-main.yml
@@ -13,12 +13,14 @@ jobs:
         with:
           GEMFURY_DEPLOY_TOKEN: ${{ secrets.GEMFURY_DEPLOY_TOKEN }}
           fetch-depth: '0'
+      - run: echo BEFORE ${{ github.ref }}
       - name: Increment, Tag and Commit for Release
         run: |
           git config user.name "$(git log -n 1 --pretty=format:%an) (action)"
           git config user.email "$(git log -n 1 --pretty=format:%ae)"
           yarn commit-and-tag-version
           git push --follow-tags origin main
+      - run: echo AFTER ${{ github.ref }}
 
 #  # Create Separate Job, to distinguish release-creation from deployment
 #  # (release could have succeeded but deployment fail, can easily re-run deployment without running create-release again)
