--- a/.github/workflows/js-merge-main.yml
+++ b/.github/workflows/js-merge-main.yml
@@ -13,14 +13,25 @@ jobs:
         with:
           GEMFURY_DEPLOY_TOKEN: ${{ secrets.GEMFURY_DEPLOY_TOKEN }}
           fetch-depth: '0'
-      - run: echo BEFORE ${{ github.ref }}
+      - run: echo Running On Ref ${{ github.ref }}
       - name: Increment, Tag and Commit for Release
         run: |
           git config user.name "$(git log -n 1 --pretty=format:%an) (action)"
           git config user.email "$(git log -n 1 --pretty=format:%ae)"
           yarn commit-and-tag-version
           git push --follow-tags origin main
-      - run: echo AFTER ${{ github.ref }}
+      - name: Get Tag Name
+        id: tag-out
+        run: |
+          USER_INPUT1=${{ inputs.override-stage-name }}
+          USER_INPUT2=${{ inputs.environment }}
+          echo "value=$(git describe --tags --abbrev=0 | tr -d " \n\t\r")" >> $GITHUB_OUTPUT
+      - run: git describe --tags --abbrev=0 | tr -d " \n\t\r"
+      - run: echo Git Seeing Tag ${{ steps.stage.outputs.value }}
+#      - name: Create Release
+#        uses: softprops/action-gh-release@v1
+#        with:
+#          tag_name: ${{ steps.stage.outputs.value }}
 
 #  # Create Separate Job, to distinguish release-creation from deployment
 #  # (release could have succeeded but deployment fail, can easily re-run deployment without running create-release again)
