--- a/.github/workflows/js-merge-main.yml
+++ b/.github/workflows/js-merge-main.yml
@@ -14,24 +14,22 @@ jobs:
           GEMFURY_DEPLOY_TOKEN: ${{ secrets.GEMFURY_DEPLOY_TOKEN }}
           fetch-depth: '0'
       - run: echo Running On Ref ${{ github.ref }}
-#      - name: Increment, Tag and Commit for Release
-#        run: |
-#          git config user.name "$(git log -n 1 --pretty=format:%an) (action)"
-#          git config user.email "$(git log -n 1 --pretty=format:%ae)"
-#          yarn commit-and-tag-version
-#          git push --follow-tags origin main
+      - name: Increment, Tag and Commit for Release
+        run: |
+          git config user.name "$(git log -n 1 --pretty=format:%an) (action)"
+          git config user.email "$(git log -n 1 --pretty=format:%ae)"
+          yarn commit-and-tag-version
+          git push --follow-tags origin main
       - name: Get Tag Name
         id: tag-out
         run: |
           tag_name=$( (git describe --tags --abbrev=0 | tr -d " \n\t\r") )
-          echo "Tag Name: $tag_name"
+          echo "Using Tag Name: $tag_name"
           echo "value=$tag_name" >> $GITHUB_OUTPUT
-      - run: git describe --tags --abbrev=0 | tr -d " \n\t\r"
-      - run: echo Git Seeing Tag ${{ steps.tag-out.outputs.value }}
-#      - name: Create Release
-#        uses: softprops/action-gh-release@v1
-#        with:
-#          tag_name: ${{ steps.stage.outputs.value }}
+      - name: Create Release
+        uses: softprops/action-gh-release@v1
+        with:
+          tag_name: refs/tags/${{ steps.tag-out.outputs.value }}
 
 #  # Create Separate Job, to distinguish release-creation from deployment
 #  # (release could have succeeded but deployment fail, can easily re-run deployment without running create-release again)
