--- a/.github/workflows/js-merge-main.yml
+++ b/.github/workflows/js-merge-main.yml
@@ -14,22 +14,25 @@ jobs:
           GEMFURY_DEPLOY_TOKEN: ${{ secrets.GEMFURY_DEPLOY_TOKEN }}
           fetch-depth: '0'
       - run: echo Running On Ref ${{ github.ref }}
-      - name: Increment, Tag and Commit for Release
-        run: |
-          git config user.name "$(git log -n 1 --pretty=format:%an) (action)"
-          git config user.email "$(git log -n 1 --pretty=format:%ae)"
-          yarn commit-and-tag-version
-          git push --follow-tags origin main
-      - name: Get Tag Name
-        id: tag-out
-        run: |
-          tag_name=$( (git describe --tags --abbrev=0 | tr -d " \n\t\r") )
-          echo "Using Tag Name: $tag_name"
-          echo "value=$tag_name" >> $GITHUB_OUTPUT
-      - name: Create Release
-        uses: softprops/action-gh-release@v1
-        with:
-          tag_name: refs/tags/${{ steps.tag-out.outputs.value }}
+        # Can use this to get an SSH endpoint you can connect to and debug via a terminal session.
+      - name: Setup tmate session
+        uses: mxschmitt/action-tmate@v3
+#      - name: Increment, Tag and Commit for Release
+#        run: |
+#          git config user.name "$(git log -n 1 --pretty=format:%an) (action)"
+#          git config user.email "$(git log -n 1 --pretty=format:%ae)"
+#          yarn commit-and-tag-version
+#          git push --follow-tags origin main
+#      - name: Get Tag Name
+#        id: tag-out
+#        run: |
+#          tag_name=$( (git describe --tags --abbrev=0 | tr -d " \n\t\r") )
+#          echo "Using Tag Name: $tag_name"
+#          echo "value=$tag_name" >> $GITHUB_OUTPUT
+#      - name: Create Release
+#        uses: softprops/action-gh-release@v1
+#        with:
+#          tag_name: ${{ steps.tag-out.outputs.value }}
 
 #  # Create Separate Job, to distinguish release-creation from deployment
 #  # (release could have succeeded but deployment fail, can easily re-run deployment without running create-release again)
