--- a/.github/workflows/js-merge-main.yml
+++ b/.github/workflows/js-merge-main.yml
@@ -14,26 +14,38 @@ jobs:
           GEMFURY_DEPLOY_TOKEN: ${{ secrets.GEMFURY_DEPLOY_TOKEN }}
           fetch-depth: '0'
       - run: echo Running On Ref ${{ github.ref }}
-        # Can use this to get an SSH endpoint you can connect to and debug via a terminal session.
-      - name: Setup tmate session
-        uses: mxschmitt/action-tmate@v3
-#      - name: Increment, Tag and Commit for Release
-#        run: |
-#          git config user.name "$(git log -n 1 --pretty=format:%an) (action)"
-#          git config user.email "$(git log -n 1 --pretty=format:%ae)"
-#          yarn commit-and-tag-version
-#          git push --follow-tags origin main
-#      - name: Get Tag Name
-#        id: tag-out
-#        run: |
-#          tag_name=$( (git describe --tags --abbrev=0 | tr -d " \n\t\r") )
-#          echo "Using Tag Name: $tag_name"
-#          echo "value=$tag_name" >> $GITHUB_OUTPUT
-#      - name: Create Release
-#        uses: softprops/action-gh-release@v1
-#        with:
-#          tag_name: ${{ steps.tag-out.outputs.value }}
-
+      - name: Increment, Tag and Commit for Release
+        run: |
+          git config user.name "$(git log -n 1 --pretty=format:%an) (action)"
+          git config user.email "$(git log -n 1 --pretty=format:%ae)"
+          yarn commit-and-tag-version
+          git push --follow-tags origin main
+      - name: Get Tag Name
+        id: tag-out
+        run: |
+          tag_name=$( (git describe --tags --abbrev=0 | tr -d " \n\t\r") )
+          echo "Using Tag Name: $tag_name"
+          echo "value=$tag_name" >> $GITHUB_OUTPUT
+      - name: Get Changelog
+        id: change-log
+        run: |
+          change_log=git diff --unified=0 --color-words --no-prefix HEAD~1 HEAD -- CHANGELOG.md  | perl -wlne 'print $1 if /^\e\[32m(.*)\e\[m$/'
+          echo "Using Change Log: $change_log"
+          echo "value=$change_log" >> $GITHUB_OUTPUT
+      - name: Create Release
+        uses: softprops/action-gh-release@v1
+        id: create-release
+        with:
+          tag_name: refs/tags/${{ steps.tag-out.outputs.value }}
+          name: ${{ steps.tag-out.outputs.value }}
+          generate_release_notes: false
+          body: ${{ steps.change-log.outputs.value }}
+      - name: Link From PR to Release
+        if: github.event_name == 'pull_request' && github.event.action == 'closed' && github.event.pull_request.merged
+        uses: thollander/actions-comment-pull-request@v2
+        with:
+          message: |
+            Released As: ${{ steps.tag-out.outputs.value }}, ${{ steps.create-release.outputs.url }}
 #  # Create Separate Job, to distinguish release-creation from deployment
 #  # (release could have succeeded but deployment fail, can easily re-run deployment without running create-release again)
 #  deploy-release:
