--- a/.github/workflows/js-merge-main.yml
+++ b/.github/workflows/js-merge-main.yml
@@ -29,9 +29,12 @@ jobs:
       - name: Get Changelog
         id: change-log
         run: |
-          change_log=git diff --unified=0 --color-words --no-prefix HEAD~1 HEAD -- CHANGELOG.md  | perl -wlne 'print $1 if /^\e\[32m(.*)\e\[m$/'
+          change_log="$(git diff --unified=0 --color-words --no-prefix HEAD~1 HEAD -- CHANGELOG.md  | perl -wlne 'print $1 if /^\e\[32m(.*)\e\[m$/')"
           echo "Using Change Log: $change_log"
-          echo "value=$change_log" >> $GITHUB_OUTPUT
+          EOF=$(dd if=/dev/urandom bs=15 count=1 status=none | base64)
+          echo "value<<$EOF" >> $GITHUB_ENV
+          echo "$change_log" >> $GITHUB_ENV
+          echo "$EOF" >> $GITHUB_ENV
       - name: Create Release
         uses: softprops/action-gh-release@v1
         id: create-release
