--- a/.github/workflows/py-deployment-w-sls.yml
+++ b/.github/workflows/py-deployment-w-sls.yml
@@ -30,10 +30,10 @@ jobs:
     runs-on: ubuntu-latest
     concurrency: deploy-${{ inputs.environment }}
     steps:
-      - uses: zerapix/reusable-workflows/py-run-tests@main
+      - uses: zerapix/reusable-workflows/py-run-tests@test
         with:
           GEMFURY_DEPLOY_TOKEN: ${{ secrets.GEMFURY_DEPLOY_TOKEN }}
-      - uses: zerapix/reusable-workflows/py-deploy-serverless@main
+      - uses: zerapix/reusable-workflows/py-deploy-serverless@test
         with:
           environment: ${{ inputs.environment }}
           override-stage-name: ${{ inputs.override-stage-name }}
