--- a/.github/workflows/js-merge-main.yml
+++ b/.github/workflows/js-merge-main.yml
@@ -6,6 +6,8 @@ jobs:
   create-release:
     concurrency: create-release
     runs-on: ubuntu-latest
+    outputs:
+      release-tag: ${{ steps.tag-out.outputs.value }}
     # If are already on a 'release' commit, we should skip this job.
     if: "!startsWith(github.event.head_commit.message, 'chore(release): ')"
     steps:
@@ -51,14 +53,20 @@ jobs:
         with:
           message: |
             :robot: Released As ${{ steps.tag-out.outputs.value }}, ${{ steps.create-release.outputs.url }}
-#  # Create Separate Job, to distinguish release-creation from deployment
-#  # (release could have succeeded but deployment fail, can easily re-run deployment without running create-release again)
-#  deploy-release:
-#    needs: create-release
-#    runs-on: ubuntu-latest
-#    environment: ${{ inputs.auto-release-environment }}
-#    concurrency: deploy-dev
-#    steps:
+  # Create Separate Job, to distinguish release-creation from deployment
+  # (release could have succeeded but deployment fail, can easily re-run deployment without running create-release again)
+  deploy-release:
+    needs: create-release
+    runs-on: ubuntu-latest
+    environment: test
+    concurrency: deploy-dev
+    steps:
+      - name: Checkout Repo
+        uses: actions/checkout@v3
+        with:
+          ref: refs/tags/${{ needs.create-release.outputs.release-tag }}
+      - name: Release Thunk
+        run: echo "Deployed Tag ${{ needs.create-release.outputs.release-tag }}
 #      - uses: zerapix/reusable-workflows/py-setup-project@test
 #      - uses: zerapix/reusable-workflows/py-deploy-serverless@test
 #        with:
