--- a/.github/workflows/js-merge-main.yml
+++ b/.github/workflows/js-merge-main.yml
@@ -66,7 +66,7 @@ jobs:
         with:
           ref: refs/tags/${{ needs.create-release.outputs.release-tag }}
       - name: Release Thunk
-        run: echo "Deployed Tag ${{ needs.create-release.outputs.release-tag }}
+        run: echo "Deployed Tag ${{ needs.create-release.outputs.release-tag }}"
 #      - uses: zerapix/reusable-workflows/py-setup-project@test
 #      - uses: zerapix/reusable-workflows/py-deploy-serverless@test
 #        with:
