--- a/.github/workflows/js-merge-main.yml
+++ b/.github/workflows/js-merge-main.yml
@@ -78,6 +78,9 @@ jobs:
               repo: context.repo.repo,
               workflow_id: 'deployment.yml',
               ref: 'refs/tags/${{ needs.create-release.outputs.release-tag }}',
+              inputs: {
+                environment: test
+              }
             })
 #      - uses: zerapix/reusable-workflows/py-setup-project@test
 #      - uses: zerapix/reusable-workflows/py-deploy-serverless@test
