--- a/all-deploy-sls/action.yml
+++ b/all-deploy-sls/action.yml
@@ -37,7 +37,7 @@ runs:
       uses: andstor/file-existence-action@v2
       with:
         files: .github/hooks/sls-deploy-pre.sh
-    - name: Run Pre-Serverless Hook Script
+    - name: Run Pre-Serverless Hook Script (**deprecated**, call extra scripts inside serverless file from now on)
       if: steps.check_pre_serverless_hook_file.outputs.files_exists == 'true'
       shell: bash
       run: bash .github/hooks/sls-deploy-pre.sh
