--- a/.github/workflows/js-deployment-w-sls.yml
+++ b/.github/workflows/js-deployment-w-sls.yml
@@ -30,13 +30,24 @@ jobs:
     runs-on: ubuntu-latest
     concurrency: deploy-${{ inputs.environment }}
     steps:
-      - run: echo "We Deployed For En ${{ inputs.environment }}"
-#      - uses: zerapix/reusable-workflows/py-run-tests@test
-#        with:
-#          GEMFURY_DEPLOY_TOKEN: ${{ secrets.GEMFURY_DEPLOY_TOKEN }}
-#      - uses: zerapix/reusable-workflows/py-deploy-serverless@test
-#        with:
-#          environment: ${{ inputs.environment }}
-#          override-stage-name: ${{ inputs.override-stage-name }}
-#          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-#          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      - run: echo "Deploying For Environment ${{ inputs.environment }}; Ref ${{ github.ref }}"
+      - name: Checkout Repo
+        uses: actions/checkout@v3
+        with:
+          # fetch-depth 0 will check out all the commits and tags needed for release-bumper
+          fetch-depth: ${{ inputs.fetch-depth }}
+
+      #----------------------------------------------
+      #       Only Check-out repo for now...
+      #
+      #       all-deploy-sls action will do everything else we need
+      #       for the moment; at some point we may want to do unit-testing here
+      #       and if that's the case then we need to pass a flag to deployment action to skip
+      #       setting up node/yarn again.
+      #----------------------------------------------
+      - uses: zerapix/reusable-workflows/all-deploy-sls@test
+        with:
+          environment: ${{ inputs.environment }}
+          override-stage-name: ${{ inputs.override-stage-name }}
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
