--- a/.github/workflows/js-test.yml
+++ b/.github/workflows/js-test.yml
@@ -13,10 +13,11 @@ jobs:
           fetch-depth: '0'
       - run: echo "Running On Action Path $GITHUB_ACTION_PATH  --- pwd:"
       - run: echo "pwd-path - $(pwd)"
+      - run: printenv
       - uses: zerapix/reusable-workflows/js-test-action@test
         with:
           GEMFURY_DEPLOY_TOKEN: ${{ secrets.GEMFURY_DEPLOY_TOKEN }}
           fetch-depth: '0'
-#      # Can use this to get an SSH endpoint you can connect to and debug via a terminal session.
-      - name: Setup tmate session
-        uses: mxschmitt/action-tmate@v3
+##      # Can use this to get an SSH endpoint you can connect to and debug via a terminal session.
+#      - name: Setup tmate session
+#        uses: mxschmitt/action-tmate@v3
