feat: testing checkout of reusable.

--- a/.github/workflows/js-test.yml
+++ b/.github/workflows/js-test.yml
@@ -16,6 +16,7 @@ jobs:
         with:
           GEMFURY_DEPLOY_TOKEN: ${{ secrets.GEMFURY_DEPLOY_TOKEN }}
           fetch-depth: '0'
+          workflow-ref: ${{ inputs.workflow-ref }}
       - run: echo "Running On Action Path $GITHUB_ACTION_PATH  --- pwd:"
       - run: echo "pwd-path - $(pwd)"
       - env:
@@ -25,10 +26,7 @@ jobs:
           echo Context Info:
           printf '%s\n' "$JSON_DOC" > foo.json
           cat foo.json
-#      - uses: zerapix/reusable-workflows/js-test-action@test
-#        with:
-#          GEMFURY_DEPLOY_TOKEN: ${{ secrets.GEMFURY_DEPLOY_TOKEN }}
-#          fetch-depth: '0'
+      - uses: .reusable-workflows/js-test-action
 ##      # Can use this to get an SSH endpoint you can connect to and debug via a terminal session.
 #      - name: Setup tmate session
 #        uses: mxschmitt/action-tmate@v3
