--- a/js-setup-project/action.yml
+++ b/js-setup-project/action.yml
@@ -25,7 +25,7 @@ runs:
     - name: Checkout Reusable Repo
       uses: actions/checkout@v3
       with:
-        repository: my-org/my-tools
+        repository: zerapix/reusable-workflows
         path: .reusable-workflows
         ref: ${{ inputs.workflow-ref }}
     - name: Setup Node.js
