--- a/js-setup-project/action.yml
+++ b/js-setup-project/action.yml
@@ -1,33 +1,16 @@
 name: 'Setup Node and Yarn Project Deps'
 description: 'Reusable action to setup node and yarn.'
 inputs:
-  GEMFURY_DEPLOY_TOKEN:
-    description: Gemfury Deploy Token
-    required: true
   fetch-depth:
     # Defaults to only current, use "0" to fetch all history for use by version bumper.
     description: Git Fetch Depth
     default: '1'
-  workflow-ref:
-    default: main
-    description: Reusable workflow branch/tag/etc I am being called in.
 runs:
   using: "composite"
   steps:
     #----------------------------------------------
-    #       Check-out repo, set-up python + poetry
+    #       Set-up node + yarn
     #----------------------------------------------
-    - name: Checkout Project Repo
-      uses: actions/checkout@v3
-      with:
-        # fetch-depth 0 will check out all the commits and tags needed for release-bumper
-        fetch-depth: ${{ inputs.fetch-depth }}
-    - name: Checkout Reusable Repo
-      uses: actions/checkout@v3
-      with:
-        repository: zerapix/reusable-workflows
-        path: .reusable-workflows
-        ref: ${{ inputs.workflow-ref }}
     - name: Setup Node.js
       id: setup_node
       uses: actions/setup-node@v3
